borealis/ott2pest/src/snapshots/ott2pest__ott__tests__parse_test10st.snap
---
source: ott2pest/src/ott.rs
expression: "Parser::parse(Rule::ident_list,\n        include_str!(\"../testdata/test10.ott\")).unwrap()"
---
[
    Pair {
        rule: ident,
        span: Span {
            str: "metavar",
            start: 0,
            end: 7,
        },
        inner: [
            Pair {
                rule: alpha,
                span: Span {
                    str: "m",
                    start: 0,
                    end: 1,
                },
                inner: [],
            },
            Pair {
                rule: alpha,
                span: Span {
                    str: "e",
                    start: 1,
                    end: 2,
                },
                inner: [],
            },
            Pair {
                rule: alpha,
                span: Span {
                    str: "t",
                    start: 2,
                    end: 3,
                },
                inner: [],
            },
            Pair {
                rule: alpha,
                span: Span {
                    str: "a",
                    start: 3,
                    end: 4,
                },
                inner: [],
            },
            Pair {
                rule: alpha,
                span: Span {
                    str: "v",
                    start: 4,
                    end: 5,
                },
                inner: [],
            },
            Pair {
                rule: alpha,
                span: Span {
                    str: "a",
                    start: 5,
                    end: 6,
                },
                inner: [],
            },
            Pair {
                rule: alpha,
                span: Span {
                    str: "r",
                    start: 6,
                    end: 7,
                },
                inner: [],
            },
        ],
    },
    Pair {
        rule: ident,
        span: Span {
            str: "var",
            start: 8,
            end: 11,
        },
        inner: [
            Pair {
                rule: alpha,
                span: Span {
                    str: "v",
                    start: 8,
                    end: 9,
                },
                inner: [],
            },
            Pair {
                rule: alpha,
                span: Span {
                    str: "a",
                    start: 9,
                    end: 10,
                },
                inner: [],
            },
            Pair {
                rule: alpha,
                span: Span {
                    str: "r",
                    start: 10,
                    end: 11,
                },
                inner: [],
            },
        ],
    },
]
